# dash_cont_py

./: 01_coleta.py  02_tratamento.py  03_remocao_arquivos.py  cad_cia_aberta.csv  pyproject.toml
.github/workflows/: deploy.yaml
Dashboard/: app.py
dados/: bp.csv  dfc.csv  dre.csv  indic_end.csv  indic_enf.csv  indic_liq.csv  indic_rent.csv  names_companies.csv
